force-app/main/default/objects/MarketingRevenewTable__c/MarketingRevenewTable__c.object-meta.xml
<CustomObject>
    <label>Marketing Revenew Table</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>AutoNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Revenew Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>