force-app/main/default/objects/MarketingRevenewTable__c/fields/ExtID__c.field-meta.xml
<CustomField>
    <fullName>ExtID__c</fullName>
    <label>ExtID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>