force-app/main/default/objects/MarketingRevenewTable__c/fields/EXW_Revenue__c.field-meta.xml
<CustomField>
    <fullName>EXW_Revenue__c</fullName>
    <label>EXW Revenue, $</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>