force-app/main/default/objects/MarketingRevenewTable__c/fields/PercentFromSegmRevenue__c.field-meta.xml
<CustomField>
    <fullName>PercentFromSegmRevenue__c</fullName>
    <label>% from segment&apos;s revenue</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>