force-app/main/default/objects/MarketingRevenewTable__c/fields/PercentFromTotalRevenue__c.field-meta.xml
<CustomField>
    <fullName>PercentFromTotalRevenue__c</fullName>
    <label>% from total revenue</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>