force-app/main/default/objects/MarketingRevenewTable__c/fields/Tonnage_t__c.field-meta.xml
<CustomField>
    <fullName>Tonnage_t__c</fullName>
    <label>Tonnage, t</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>