force-app/main/default/objects/MarketingRevenewTable__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Year__c</columns>
    <columns>MarketSegment__c</columns>
    <columns>Tonnage_t__c</columns>
    <columns>EXW_Revenue__c</columns>
    <columns>PercentFromSegmRevenue__c</columns>
    <columns>PercentFromTotalRevenue__c</columns>
    <columns>BusinessType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>